<resources>
    <string name="app_name">TheGameVault</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_GameList">Game list</string>
    <string name="menu_Library">Library</string>

    <string name="GameVault">Game Vault</string>

    //Settings text
    <string name="settings">Settings</string>
    <string name="font_size">Font Size</string>
    <string name="app_colour">App Colour</string>
    <string name="email">Email</string>
    <string name="username">username</string>

    <string name="credits">Credits</string>
    <string name="creditsDesc">
        * All information and images for the games are from RAWG Video Games Database using there public API \n
        * Designed and coded by Connor Cozad \n
    </string>
    
    
    <string name="emailUs">Email</string>
    <string name="call">Call</string>
    <string name="text">Text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>